--- a/app/templates/chat.html
+++ b/app/templates/chat.html
@@ -2,17 +2,32 @@
 <html lang="en">
 
     <head>
-        <!-- Existing head content -->
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+            integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+        <!-- Your existing CSS -->
         <link rel="stylesheet" type="text/css" href="/static/css/chat.css">
     </head>
 
     <body>
-        <div id="chat-container"></div>
+        <div class="container-fluid d-flex flex-column vh-100">
+            <div id="chat-container" class="flex-grow-1 overflow-auto"></div>
 
-        <form id="chat-form">
-            <input type="text" name="user_input" id="user-input" placeholder="Type your message..." required>
-            <button type="submit">Send</button>
-        </form>
+            <form id="chat-form" class="mb-3">
+                <div class="input-group">
+                    <input type="text" name="user_input" id="user-input" class="form-control"
+                        placeholder="Type your message..." required>
+                    <div class="input-group-append">
+                        <button type="submit" class="btn btn-primary">Send</button>
+                    </div>
+                </div>
+            </form>
+        </div>
 
         <script>
             const chatContainer = document.getElementById('chat-container');
@@ -62,6 +77,7 @@
                 }
                 messageDiv.innerHTML = `<div class="profile-pic"></div><div>${sender}: ${message}</div>`;
                 chatContainer.appendChild(messageDiv);
+                chatContainer.scrollTop = chatContainer.scrollHeight;
             }
 
             function showLoadingIndicator() {
@@ -78,8 +94,17 @@
                 }
             }
         </script>
-
-
+        <!-- Optional JavaScript -->
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
     </body>
 
 </html>
