--- a/app/static/css/chat.css
+++ b/app/static/css/chat.css
@@ -31,7 +31,7 @@ body {
 
 /* Styling of the chatbot messages */
 #chat-container div.message.bot {
-    background-color: #b7dcfa;
+    background-color: #b7fae0;
 }
 
 #chat-container div.message.user {
@@ -39,7 +39,7 @@ body {
 }
 
 #chat-container>div.message.bot>div:nth-child(even) {
-    background-color: #b7dcfa;
+    background-color: #b7fae0;
 }
 
 #chat-container>div.message.user>div:nth-child(even) {
@@ -66,7 +66,7 @@ body {
 } */
 
 #chat-form button:hover {
-    background-color: #0057fa;
+    background-color: #00a54a;
 }
 
 /* Profile picture styles */
