--- a/app/templates/chat.html
+++ b/app/templates/chat.html
@@ -23,7 +23,7 @@
                     <input type="text" name="user_input" id="user-input" class="form-control"
                         placeholder="Type your message..." required>
                     <div class="input-group-append">
-                        <button type="submit" class="btn btn-primary">Send</button>
+                        <button type="submit" class="btn btn-success">Send</button>
                     </div>
                 </div>
             </form>
