--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,35 +3,41 @@
 {% block title %}Home{% endblock %}
 
 {% block main %}
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <h1 class="display-4"><strong>Qualtrics Interactive Political Chatbot</strong></h1>
-                <p class="lead">On this platform, we developed an advanced API solution building an interactive political chatbot. Our focus is on academic research and experimentation, making it an ideal tool for your master thesis. With our cutting-edge technology, you can explore the dynamics of political discourse and analyze the interactions within this domain.</p>
-                <hr class="my-4">
-                
-                <h2>Contact Us</h2>
-                <p>For inquiries, support, or feedback, please <a href="/about" class="api-link">contact us</a>. Our team is ready to assist you with any questions or support you may need regarding our services.</p>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <h1 class="display-4"><strong>Qualtrics Interactive Political Chatbot</strong></h1>
+            <p class="lead">On this platform, we developed an advanced API solution building an interactive political
+                chatbot. Our focus is on academic research and experimentation, making it an ideal tool for your master
+                thesis. With our cutting-edge technology, you can explore the dynamics of political discourse and
+                analyze the interactions within this domain.</p>
+            <hr class="my-4">
 
-                <h2>Chatbot Completion Example</h2>
-                <p>
-                    Access an illustrative example of politically influenced content generation through this 
-                    <a href="/v2/complete" class="api-link">link</a>. Here, you'll find a sample output centered 
-                    on "US Immigration Policy," crafted against a left-leaning perspective. This page serves as a 
-                    demonstration of how political leanings can shape and impact the creation of topical content.
-                </p>
-                
+            <h2>Contact Us</h2>
+            <p>For inquiries, support, or feedback, please <a href="/about" class="api-link">contact us</a>. Our team is
+                ready to assist you with any questions or support you may need regarding our services.</p>
 
-                <h2>Interactive Political Chatbot</h2>
-                <p>Discover the insights and dynamics of political discourse with our <a href="/chat" class="api-link">Interactive Political Chatbot</a>. It's a unique platform for engaging in political discussions and analysis.</p>
+            <h2>Chatbot Completion Example</h2>
+            <p>
+                Access an illustrative example of politically influenced content generation through this
+                <a href="/v2/complete" class="api-link">link</a>. Here, you'll find a sample output centered
+                on "US Immigration Policy," crafted against a left-leaning perspective. This page serves as a
+                demonstration of how political leanings can shape and impact the creation of topical content.
+            </p>
 
-                <br>
-                <a class="btn btn-success btn-lg" href="/chat" role="button">Get Started with Our API</a>
-                <br><br>
-                <!-- Placeholder for an Image or a Graphical Representation -->
-                <img src="/static/images/usage_screenshots/api_sequence.png" alt="API Illustration" style="width: 50%; height: auto;">
-            </div>
+
+            <h2>Interactive Political Chatbot</h2>
+            <p>Discover the insights and dynamics of political discourse with our <a href="/chat"
+                    class="api-link">Interactive Political Chatbot</a>. It's a unique platform for engaging in political
+                discussions and analysis.</p>
+
+            <br>
+            <a class="btn btn-success btn-lg" href="/chat" role="button">Get Started with Our API</a>
+            <br><br>
+            <!-- Placeholder for an Image or a Graphical Representation -->
+            <img src="/static/images/usage_screenshots/api_sequence.png" alt="API Illustration"
+                style="width: 50%; height: auto;">
         </div>
     </div>
+</div>
 {% endblock %}
-
